<resources>
    <string name="app_name">NewsApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_app1">News App</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="hello">Hello</string>
    <string name="file_manager">File Manager</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="general">General</string>
    <string name="title">title</string>
    <string name="load_more">Load More</string>
    <string name="published_date">Published_date</string>
    <string name="back">Back</string>
</resources>