<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/GeneralFragment"
            android:title="@string/general"
            android:icon="@drawable/ic_general"/>

        <item
            android:id="@+id/BusinessFragment"
            android:title="@string/business"
            android:icon="@drawable/ic_business"/>

        <item
            android:id="@+id/EntertainmentFragment"
            android:title="@string/entertainment"
            android:icon="@drawable/ic_entertaiment"/>

        <item
            android:id="@+id/SportsFragment"
            android:title="@string/sports"
            android:icon="@drawable/ic_sport"/>

        <item
            android:id="@+id/HealthFragment"
            android:title="@string/health"
            android:icon="@drawable/ic_health"/>

        <item
            android:id="@+id/ScienceFragment"
            android:title="@string/science"
            android:icon="@drawable/ic_science"/>

        <item
            android:id="@+id/TechnologyFragment"
            android:title="@string/technology"
            android:icon="@drawable/ic_technology"/>
    </group>
</menu>